codepkg/objects/Application_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Bypass_Trigger_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable trigger for entire application</description>
        <label>Bypass Trigger Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_to_Execute__c</fullName>
        <description>Name of the class which to be execute</description>
        <label>Class to Execute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Select All in this project only If functionality is required for all the projects.</description>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cal_OES_Public_Health_Ordering_System</fullName>
                    <default>true</default>
                    <label>Cal_OES_Public_Health_Ordering_System</label>
                </value>
                <value>
                    <fullName>Cal_OES_Donation_Intake_Portal</fullName>
                </value>
                <value>
                    <fullName>CalOES_HMA</fullName>
                </value>
                <value>
                    <fullName>Cal_OES_Support</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Config</label>
    <pluralLabel>Application Configs</pluralLabel>
</CustomObject>